--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -93,7 +93,10 @@ document.querySelector(".tablink").click();
                                             <i class="fa fa-star"></i>
                                         </div>
                                         <div class="product-btns">
-                                            <button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">Lista de deseo</span></button>
+                                            <button class="add-to-wishlist" data-product-id="<%= producto.id %>" data-product-name="<%= producto.nombre %>" 
+                                                data-product-price="<%= producto.precio %>" data-product-discount="<%= producto.descuento || 0 %>"
+                                                data-product-image="<%= producto.imagen %>" data-product-color="<%= producto.color %>">
+                                                <i class="fa fa-heart-o"></i> <span class="tooltipp">Lista de deseo</span></button>
                                             <button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">Comparación</span></button>
                                             <button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">Vistazo rapido</span></button>
                                         </div>
@@ -149,7 +152,10 @@ document.querySelector(".tablink").click();
                                             <i class="fa fa-star"></i>
                                         </div>
                                         <div class="product-btns">
-                                            <button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">Lista de deseo</span></button>
+                                            <button class="add-to-wishlist" data-product-id="<%= producto.id %>" data-product-name="<%= producto.nombre %>" 
+                                                data-product-price="<%= producto.precio %>" data-product-discount="<%= producto.descuento || 0 %>"
+                                                data-product-image="<%= producto.imagen %>" data-product-color="<%= producto.color %>">
+                                                <i class="fa fa-heart-o"></i> <span class="tooltipp">Lista de deseo</span></button>
                                             <button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">Comparación</span></button>
                                             <button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">Vistazo rapido</span></button>
                                         </div>
@@ -205,7 +211,10 @@ document.querySelector(".tablink").click();
                                             <i class="fa fa-star"></i>
                                         </div>
                                         <div class="product-btns">
-                                            <button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">Lista de deseo</span></button>
+                                            <button class="add-to-wishlist" data-product-id="<%= producto.id %>" data-product-name="<%= producto.nombre %>" 
+                                                data-product-price="<%= producto.precio %>" data-product-discount="<%= producto.descuento || 0 %>"
+                                                data-product-image="<%= producto.imagen %>" data-product-color="<%= producto.color %>">
+                                                <i class="fa fa-heart-o"></i> <span class="tooltipp">Lista de deseo</span></button>
                                             <button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">Comparación</span></button>
                                             <button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">Vistazo rapido</span></button>
                                         </div>
@@ -261,7 +270,10 @@ document.querySelector(".tablink").click();
                                             <i class="fa fa-star"></i>
                                         </div>
                                         <div class="product-btns">
-                                            <button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">Lista de deseo</span></button>
+                                            <button class="add-to-wishlist" data-product-id="<%= producto.id %>" data-product-name="<%= producto.nombre %>" 
+                                                data-product-price="<%= producto.precio %>" data-product-discount="<%= producto.descuento || 0 %>"
+                                                data-product-image="<%= producto.imagen %>" data-product-color="<%= producto.color %>">
+                                                <i class="fa fa-heart-o"></i> <span class="tooltipp">Lista de deseo</span></button>
                                             <button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">Comparación</span></button>
                                             <button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">Vistazo rapido</span></button>
                                         </div>
@@ -317,7 +329,10 @@ document.querySelector(".tablink").click();
                                             <i class="fa fa-star"></i>
                                         </div>
                                         <div class="product-btns">
-                                            <button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">Lista de deseo</span></button>
+                                            <button class="add-to-wishlist" data-product-id="<%= producto.id %>" data-product-name="<%= producto.nombre %>"
+                                                data-product-price="<%= producto.precio %>" data-product-discount="<%= producto.descuento || 0 %>"
+                                                data-product-image="<%= producto.imagen %>" data-product-color="<%= producto.color %>">
+                                                <i class="fa fa-heart-o"></i> <span class="tooltipp">Lista de deseo</span></button>
                                             <button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">Comparación</span></button>
                                             <button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">Vistazo rapido</span></button>
                                         </div>
@@ -434,7 +449,10 @@ document.querySelector(".tablink").click();
                                         <i class="fa fa-star"></i>
                                     </div>
                                     <div class="product-btns">
-                                        <button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">Lista de deseo</span></button>
+                                        <button class="add-to-wishlist" data-product-id="<%= producto.id %>" data-product-name="<%= producto.nombre %>" 
+                                                data-product-price="<%= producto.precio %>" data-product-discount="<%= producto.descuento || 0 %>"
+                                                data-product-image="<%= producto.imagen %>" data-product-color="<%= producto.color %>">
+                                                <i class="fa fa-heart-o"></i> <span class="tooltipp">Lista de deseo</span></button>
                                         <button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">Comparación</span></button>
                                         <button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">Vistazo rapido</span></button>
                                     </div>
