--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -139,8 +139,8 @@
     <script src="/js/cart.js"></script>
     <script src="/js/search.js"></script>
     <script src="/js/cartPreview.js"></script>
+    <script src="/js/favView.js"></script>
     <script src="/js/nav.js"></script>
-
 
 </body>
 </html>
