--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -96,30 +96,30 @@
                 <!-- SEARCH BAR -->
                 <div class="col-md-6">
                     <div class="header-search">
-                    <form id="search-form">
-                        <div class="search-wrapper">
-                        <input class="input" id="search-input" placeholder="Buscar">
-                        <div class="search-icon-btn">
-                            <i class="fa fa-search"></i>
+                        <form id="search-form">
+                            <div class="search-wrapper">
+                                <input class="input" id="search-input" placeholder="Buscar">
+                                <div class="search-icon-btn">
+                                    <i class="fa fa-search"></i>
+                                </div>
+                            </div>
+                        </form>
+                        <div id="search-overlay">
+                            <div id="search-results" class="search-results-dropdown"></div>
                         </div>
-                        </div>
-                    </form>
-                    <div id="search-overlay">
-                    <div id="search-results" class="search-results-dropdown"></div>
                     </div>
                 </div>
-            </div>
-            <!-- /SEARCH BAR -->
+                <!-- /SEARCH BAR -->
 
                 <!-- ACCOUNT -->
                 <div class="col-md-3 clearfix">
                     <div class="header-ctn">
                         <!-- Wishlist -->
                         <div>
-                            <a href="#">
+                            <a href="/fav" id="fav-count">
                                 <i class="fa fa-heart-o"></i>
                                 <span>Tus Favoritos</span>
-                                <div class="qty-fav">2</div>
+                                <div class="qty-fav" id="wishlist-count">0</div>
                             </a>
                         </div>
                         <!-- /Wishlist -->
@@ -146,8 +146,6 @@
                             </div>
                         </div>
                         <!-- /Cart -->
-
-                        
 
                         <!-- Menu Toogle -->
                         <div class="menu-toggle">
