--- a/src/views/store/fav.ejs
+++ b/src/views/store/fav.ejs
@@ -1,29 +1,32 @@
 <%- include('../partials/header.ejs') %>
-<!DOCTYPE html>
-<html lang=en>
 
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset=utf-8>
-  <title>Testing a PayPal Payments Standard Button</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="/css/cart.css"> <!-- Crea este archivo CSS específico -->
 </head>
 
 <body>
-  <h2>Buy Strings!</h2>
-  <table>
-    <tr>
-      <td>Bass Guitar Strings</td>
-      <td>
-        <form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post">
-          <input type="hidden" name="cmd" value="_s-xclick">
-          <input type="hidden" name="hosted_button_id" value="6RNT8A4HBBJRE">
-          <input type="image" src="https://www.sandbox.paypal.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-          <img alt="" src="https://www.sandbox.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
-        </form>
-      </td>
-    </tr>
-  </table>
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="section-title"><br>
+                    <h3 class="title">Lista de deseos</h3>
+                </div>
+                <span class="text-muted" id="fav-items-count">0 items</span>
+                <div id="fav-items-container">
+                    <p>No hay productos en tu lista de deseos.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+        
+    <%- include('../partials/footer.ejs') %>
+
+    <script src="/js/favView.js"></script> <!-- Nuevo archivo JS para favoritos -->
+    
 </body>
-
 </html>
-
-<%- include('../partials/footer.ejs') %>
