Ajustando el boton agregar a favoritos

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -170,7 +170,9 @@ document.querySelector(".tablink").click();
                                 </div>
                                 <% }); %>
                             </div>
-                        </div>
+                        </div>    
+                        <script src="/js/favView.js"></script>
+
                         
                         <div id="laptops" class="tabcontent">
                             <div class="products-slick" data-nav="#slick-nav-3" id="product-list-laptops">
