--- a/src/views/store/fav.ejs
+++ b/src/views/store/fav.ejs
@@ -25,7 +25,7 @@
     </div>
         
     <%- include('../partials/footer.ejs') %>
-
     
 </body>
+    <script src="/js/favView.js"></script>
 </html>
