Refactorizando y optimizando fav

--- a/src/views/store/fav.ejs
+++ b/src/views/store/fav.ejs
@@ -27,5 +27,5 @@
     <%- include('../partials/footer.ejs') %>
     
 </body>
-    <script src="/js/favView.js"></script>
+    <script src="/js/favView.js" type="module"></script>
 </html>
