--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -136,10 +136,10 @@
     <script src="/js/slick.min.js"></script>
     <script src="/js/nouislider.min.js"></script>
     <script src="/js/main.js"></script>
-    <script src="/js/cart.js"></script>
     <script src="/js/search.js"></script>
+    <script src="/js/cart.js"></script>
     <script src="/js/cartPreview.js"></script>
-    <script src="/js/favView.js"></script>
+    <script src="/js/fav.js" type="module"></script>
     <script src="/js/nav.js"></script>
 
 </body>
