refactorizando y optimizando cart

--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -137,8 +137,8 @@
     <script src="/js/nouislider.min.js"></script>
     <script src="/js/main.js"></script>
     <script src="/js/search.js"></script>
-    <script src="/js/cart.js"></script>
-    <script src="/js/cartPreview.js"></script>
+    <script src="/js/cart.js" type="module"></script>
+    <script src="/js/cartPreview.js" type="module"></script>
     <script src="/js/fav.js" type="module"></script>
     <script src="/js/nav.js"></script>
 
