--- a/src/views/store/cart.ejs
+++ b/src/views/store/cart.ejs
@@ -56,7 +56,7 @@
         
     <%- include('../partials/footer.ejs') %>
 
-    <script src="/js/cartView.js"></script>
+    <script src="/js/cartView.js" type="module"></script>
 
 </body>
 
