--- a/public/css/fav.css
+++ b/public/css/fav.css
@@ -1,16 +1,17 @@
-.cart-item {
+.fav-item {
     border-bottom: 1px solid #ddd;
     display: flex;
     align-items: center;
-    gap: 47px;
+    gap: 80px;
     border: 1px solid #ddd;
     border-radius: 8px;  
     padding: 10px;
     margin-bottom: 15px;
     background-color: #f9f9f9; 
+    width: 150%;
 }
 
-.cart-item:last-child {
+.fav-item:last-child {
     border-bottom: none;
 }
 
@@ -86,14 +87,15 @@ span.sale {
 
 .remove-btn {
     font-size: 20px;
-    color: #dc2626; 
+    color: #dc2626;
     cursor: pointer;
     border: none;
     background: transparent;
-    padding: 5px 6px;
+    padding: 4px 6px;
     border-radius: 5px;
-    display: flex;
+    display: inline-flex;
     align-items: center;
+    justify-content: center;
 }
 
 .remove-btn:hover {
@@ -101,40 +103,44 @@ span.sale {
     background-color: rgba(220, 38, 38, 0.1); 
 }
 
-.cart-suma { 
-    margin-top: 110px;
-    padding: 20px;
-    background: #f8f9fa;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-    border: 1px solid #ddd;
-    border-radius: 8px;  
-    background-color: #f9f9f9; 
+.add-to-cart-btn {
+  font-size: 1.2rem;
+  position: relative;
+  border: 2px solid transparent;
+  height: 40px;
+  padding: 0 30px;
+  background-color: #ef233c;
+  color: #FFF;
+  text-transform: uppercase;
+  font-weight: 700;
+  border-radius: 40px;
+  -webkit-transition: 0.2s all;
+  transition: 0.2s all;
+  white-space: nowrap;
 }
 
-.cart-suma .total-price {
-    margin-top: 30px;
-    font-size: 1.25rem;
-    font-weight: 600;
+.add-to-cart-btn>i {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 40px;
+  height: 40px;
+  line-height: 38px;
+  color: #D10024;
+  opacity: 0;
+  visibility: hidden;
+  
 }
 
-.btn-checkout {
-    background-color: #333;
-    color: white;
-    border-radius: 25px;
+.add-to-cart-btn:hover {
+  background-color: #FFF;
+  color: #D10024;
+  border-color: #D10024;
 }
 
-.btn-checkout:hover {
-    background-color: #000000;
-    color: white
-}
-
-.cart-suma .btn {
-    width: 100%;
-    padding: 12px;
-}
-
-.cart-suma .btn:disabled {
-    background-color: #ddd;
+.add-to-cart-btn:hover>i {
+  opacity: 1;
+  visibility: visible;
 }
 
 /*----------------------------*\
@@ -142,7 +148,7 @@ span.sale {
 \*----------------------------*/
 
 @media screen and (max-width: 768px) {
-  .cart-item {
+  .fav-item {
     flex-direction: column;
     align-items: center;
     text-align: center;  
@@ -170,6 +176,17 @@ span.sale {
     margin-right: 0;
   }
 
+  .add-to-cart-btn {
+    width: 100%;
+    padding-left: 50px;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .add-to-cart-btn>i {
+    left: 10px;
+  }
+
   .remove-btn {
     align-self: center;
     margin-top: 10px;
@@ -179,7 +196,7 @@ span.sale {
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center; 
     gap: 10px;
   }
 
@@ -189,19 +206,5 @@ span.sale {
 
   span.sale {
     margin-top: 5px;
-  }
-
-  .cart-suma {
-    width: 100%;
-    margin-top: 50px;
-    text-align: center;
-  }
-
-  .cart-suma .total-price {
-    font-size: 18px;
-  }
-
-  .cart-suma .btn {
-    padding: 12px;
   }
 }
