--- a/src/views/store/fav.ejs
+++ b/src/views/store/fav.ejs
@@ -6,13 +6,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/css/cart.css"> <!-- Crea este archivo CSS específico -->
+    <link rel="stylesheet" href="/css/fav.css">
 </head>
 
 <body>
     <div class="container mt-5">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-8">
                 <div class="section-title"><br>
                     <h3 class="title">Lista de deseos</h3>
                 </div>
