--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -86,8 +86,7 @@
                             <ul class="footer-links">
                                 <li><a href="/account">Mi Cuenta</a></li>
                                 <li><a href="/cart">Ver Carrito</a></li>
-                                <li><a href="#">Favoritos</a></li>
-                                <li><a href="#">Mi Pedido</a></li>
+                                <li><a href="/fav">Favoritos</a></li>
                             </ul>
                         </div>
                     </div>
