--- a/src/views/store/product.ejs
+++ b/src/views/store/product.ejs
@@ -95,7 +95,7 @@
 						class="add-to-cart-btn" id="add-to-cart-btn" data-id="<%= producto.id %>" data-nombre="<%= producto.nombre %>"
 						data-precio="<%= producto.precio %>"data-descuento="<%= producto.descuento %>" data-stock="<%= stocksPorColor %>"
 							data-color="<%= colorSeleccionado %>">
-						<i class="fa fa-shopping-cart"></i> Añadir al carrito
+						<i class="fa fa-shopping-cart"></i> Agregar al carrito
 						</button>
 					</div>
 				</div>  
