--- a/src/views/store/store.ejs
+++ b/src/views/store/store.ejs
@@ -209,7 +209,7 @@
 															<button class="add-to-cart-btn"
 															data-id="<%= producto.id %>" data-nombre="<%= producto.nombre %>" data-precio="<%= producto.precio %>" data-color="<%= producto.color %>"
 															data-descuento="<%= producto.descuento %>" data-stock="<%= producto.stock %>" data-imagen="<%= producto.imagen %>">
-															<i class="fa fa-shopping-cart"></i> Añadir al carrito
+															<i class="fa fa-shopping-cart"></i> Agregar al carrito
 															</button>
 															</div>										
 														</div>
