--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -105,7 +105,7 @@ document.querySelector(".tablink").click();
                                         <button class="add-to-cart-btn"
                                         data-id="<%= producto.id %>" data-nombre="<%= producto.nombre %>" data-precio="<%= producto.precio %>" data-color="<%= producto.color %>"
                                         data-descuento="<%= producto.descuento %>" data-stock="<%= producto.stock %>" data-imagen="<%= producto.imagen %>">
-                                        <i class="fa fa-shopping-cart"></i> Agregar al carrito
+                                        <i class="fa fa-shopping-cart"></i> Añadir al carrito
                                         </button>
                                     </div>                             
                                 </div>
@@ -164,7 +164,7 @@ document.querySelector(".tablink").click();
                                         <button class="add-to-cart-btn"
                                         data-id="<%= producto.id %>" data-nombre="<%= producto.nombre %>" data-precio="<%= producto.precio %>" data-color="<%= producto.color %>"
                                         data-descuento="<%= producto.descuento %>" data-stock="<%= producto.stock %>" data-imagen="<%= producto.imagen %>">
-                                        <i class="fa fa-shopping-cart"></i> Agregar al carrito
+                                        <i class="fa fa-shopping-cart"></i> Añadir al carrito
                                         </button>
                                     </div>
                                 </div>
@@ -223,7 +223,7 @@ document.querySelector(".tablink").click();
                                         <button class="add-to-cart-btn"
                                         data-id="<%= producto.id %>" data-nombre="<%= producto.nombre %>" data-precio="<%= producto.precio %>" data-color="<%= producto.color %>"
                                         data-descuento="<%= producto.descuento %>" data-stock="<%= producto.stock %>" data-imagen="<%= producto.imagen %>">
-                                        <i class="fa fa-shopping-cart"></i> Agregar al carrito
+                                        <i class="fa fa-shopping-cart"></i> Añadir al carrito
                                         </button>
                                     </div>
                                 </div>
@@ -282,7 +282,7 @@ document.querySelector(".tablink").click();
                                         <button class="add-to-cart-btn"
                                         data-id="<%= producto.id %>" data-nombre="<%= producto.nombre %>" data-precio="<%= producto.precio %>" data-color="<%= producto.color %>"
                                         data-descuento="<%= producto.descuento %>" data-stock="<%= producto.stock %>" data-imagen="<%= producto.imagen %>">
-                                        <i class="fa fa-shopping-cart"></i> Agregar al carrito
+                                        <i class="fa fa-shopping-cart"></i> Añadir al carrito
                                         </button>
                                     </div>
                                 </div>
@@ -341,7 +341,7 @@ document.querySelector(".tablink").click();
                                         <button class="add-to-cart-btn"
                                         data-id="<%= producto.id %>" data-nombre="<%= producto.nombre %>" data-precio="<%= producto.precio %>" data-color="<%= producto.color %>"
                                         data-descuento="<%= producto.descuento %>" data-stock="<%= producto.stock %>" data-imagen="<%= producto.imagen %>">
-                                        <i class="fa fa-shopping-cart"></i> Agregar al carrito
+                                        <i class="fa fa-shopping-cart"></i> Añadir al carrito
                                         </button>
                                     </div>
                                 </div>
@@ -461,7 +461,7 @@ document.querySelector(".tablink").click();
                                     <button class="add-to-cart-btn"
                                         data-id="<%= producto.id %>" data-nombre="<%= producto.nombre %>" data-precio="<%= producto.precio %>" data-color="<%= producto.color %>"
                                         data-descuento="<%= producto.descuento %>" data-stock="<%= producto.stock %>" data-imagen="<%= producto.imagen %>">
-                                        <i class="fa fa-shopping-cart"></i> Agregar al carrito
+                                        <i class="fa fa-shopping-cart"></i> Añadir al carrito
                                         </button>
                                 </div>
                             </div>
