--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -279,10 +279,9 @@ document.querySelector(".tablink").click();
                                         </div>
                                     </div>
                                     <div class="add-to-cart">
-                                        <button class="add-to-cart-btn"
-                                        data-id="<%= producto.id %>" data-nombre="<%= producto.nombre %>" data-precio="<%= producto.precio %>" data-color="<%= producto.color %>"
-                                        data-descuento="<%= producto.descuento %>" data-stock="<%= producto.stock %>" data-imagen="<%= producto.imagen %>">
-                                        <i class="fa fa-shopping-cart"></i> Añadir al carrito
+                                        <button class="add-to-cart-btn" data-id="<%= producto.id %>" data-nombre="<%= producto.nombre %>" data-precio="<%= producto.precio %>" 
+                                            data-color="<%= producto.color %>" data-descuento="<%= producto.descuento %>" data-stock="<%= producto.stock %>" data-imagen="<%= producto.imagen %>">
+                                            <i class="fa fa-shopping-cart"></i> Añadir al carrito
                                         </button>
                                     </div>
                                 </div>
