--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -134,7 +134,7 @@
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/slick.min.js"></script>
     <script src="/js/nouislider.min.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="/js/main.js" type="module"></script>
     <script src="/js/search.js"></script>
     <script src="/js/cart.js" type="module"></script>
     <script src="/js/cartPreview.js" type="module"></script>
