pagar con paypal completado

--- a/src/views/store/order-details.ejs
+++ b/src/views/store/order-details.ejs
@@ -66,7 +66,6 @@
     </div>
   </div>
 
-  <a href="/user/orders" class="btn btn-primary mt-3">Volver a mis pedidos</a>
-</div>
+<a href="/orders" class="btn btn-primary mt-3">Volver a mis pedidos</a></div>
 
 <%- include('../partials/footer.ejs') %>
