--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -87,6 +87,7 @@
                                 <li><a href="/account">Mi Cuenta</a></li>
                                 <li><a href="/cart">Ver Carrito</a></li>
                                 <li><a href="/fav">Favoritos</a></li>
+                                <li><a href="/orders">Mis Pedidos</a></li>
                             </ul>
                         </div>
                     </div>
