--- a/src/views/store/user-orders.ejs
+++ b/src/views/store/user-orders.ejs
@@ -11,7 +11,7 @@
   <% } else { %>
     <div class="list-group">
       <% orders.forEach(order => { %>
-        <a href="/user/orders/<%= order.id %>" class="list-group-item list-group-item-action">
+        <a href="/orders/<%= order.id %>" class="list-group-item list-group-item-action">
           <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">Pedido #<%= order.id %></h5>
             <small class="text-muted"><%= new Date(order.fecha_creacion).toLocaleDateString() %></small>
@@ -28,7 +28,7 @@
         </a>
       <% }); %>
     </div>
-  <% } %>
+  <% } %> 
 </div>
 
 <%- include('../partials/footer.ejs') %>
