Implementando toastify y error de stock corregido

--- a/src/views/store/fav.ejs
+++ b/src/views/store/fav.ejs
@@ -1,5 +1,7 @@
 <%- include('../partials/header.ejs') %>
 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -90,4 +92,5 @@
     
 </body>
     <script src="/js/favView.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </html>
