--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,5 +1,7 @@
 <%- include ('./partials/header.ejs') %>
 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+  
 <!-- HTML TAB -->
 <script>
 function openCategory(evt, categoryName) {
@@ -472,12 +474,13 @@ document.querySelector(".tablink").click();
                 <% } %>
             </div>
         </div>
-        </div>
+    </div>
 <!-- /Section -->
 
 		<%- include('./partials/footer.ejs') %>
 
-
 			</body>
+
+<script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 
 			</html>
