--- a/src/views/store/store.ejs
+++ b/src/views/store/store.ejs
@@ -3,6 +3,8 @@
 	<!DOCTYPE html>
 	<html lang="en">
 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+
 <script>
 	function actualizarProductos() {
 
@@ -283,5 +285,7 @@
 	<%- include('../partials/footer.ejs') %>
 
 	</body>
+	
+		<script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 
 	</html>
