Optimizando fav y personalizando toastify

--- a/src/views/store/fav.ejs
+++ b/src/views/store/fav.ejs
@@ -1,6 +1,8 @@
 <%- include('../partials/header.ejs') %>
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+<link rel="stylesheet" href="/css/toastify.css">
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -93,4 +95,5 @@
 </body>
     <script src="/js/favView.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+	<script src="https://unpkg.com/feather-icons"></script>
 </html>
