--- a/src/views/store/order.ejs
+++ b/src/views/store/order.ejs
@@ -1,6 +1,7 @@
 <%- include('../partials/header.ejs') %>
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+<link rel="stylesheet" href="/css/toastify.css">
 
 	<!-- BREADCRUMB -->
 	<div id="breadcrumb" class="section">
@@ -63,7 +64,7 @@
 								<option value="2-5">2 PM - 5 PM</option>
 							</select>
 							<p><small><strong> Nota:</strong> La fecha de entrega será en algún momento dentro de la próxima semana. 
-                La compañía te informará sobre el día exacto de entrega. En caso de que no se realice en ese tiempo, contactenos al +1 (809) 277 2371</small></p>
+                			La compañía te informará sobre el día exacto de entrega. En caso de que no se realice en ese tiempo, contactenos al +1 (809) 277 2371</small></p>
 						</div>						
 						<div class="form-group">
 							<div class="input-checkbox">
@@ -148,6 +149,7 @@
     
     <script src="https://www.paypal.com/sdk/js?client-id=Adxx8fzjTmAkgRKTLil8ciSgRYaYZxTnJf96IAsdJVAvE8-fW3Rx2hbrDZ5VC662O1So9fgvFOPZd5IG&currency=USD"></script>
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+	<script src="https://unpkg.com/feather-icons"></script>
     <script src="/js/order.js" type="module"></script>
 
 	</html>
