--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,6 +1,9 @@
 <%- include ('./partials/header.ejs') %>
 
+  <link rel="stylesheet" href="/css/toastify.css">
+
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+  
   
 <!-- HTML TAB -->
 <script>
@@ -26,7 +29,6 @@ document.addEventListener("DOMContentLoaded", function() {
 document.querySelector(".tablink").click();
 });
 </script>
-
 <!-- /HTML TAB -->
  
 	<!-- SECTION -->
@@ -399,88 +401,93 @@ document.querySelector(".tablink").click();
 </div>
 <!-- /SECTION -->
 
-		<!-- Section -->
-        <div class="section">
-        <!-- container -->
-        <div class="container">
-            <!-- row -->
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="section-title text-center">
-                        <h3 class="title">Recomendados</h3>
-                    </div>
+<!-- Section -->
+<div class="section">
+    <!-- container -->
+    <div class="container">
+        <!-- row -->
+         <div class="row"> 
+            <div class="col-md-12">
+                <div class="section-title text-center">
+                    <h3 class="title">Recomendados</h3>
                 </div>
-                <% if (recomendados && recomendados.length > 0) { %>
-                    <% recomendados.forEach(producto => { %>
-                        <!-- product -->
-                        <div class="col-md-3 col-xs-6">
-                            <div class="product">
-                                <div class="product-img">
-                                    <a href="/product/<%= producto.id %>?color=<%= producto.color %>">
-                                        <img src="<%= producto.imagen %>" alt="<%= producto.nombre %>">                                    
-                                    <div class="product-label">
-                                        <% if (producto.descuento > 0) { %>
-                                            <span class="sale">-<%= producto.descuento %>%</span>
-                                        <% } %>
-
-                                        <% 
-										const fechaCreacion = new Date(producto.fecha);
-										const hoy = new Date();
-										const diferenciaDias = (hoy - fechaCreacion) / (1000 * 60 * 60 * 24);
-										if (diferenciaDias <= 30) {
-										%>
-											<span class="new">Nuevo</span>
-										<% } %>
-                                    </div>
-                                </div>
-                                <div class="product-body">
-                                    <p class="product-category"><%= producto.categoria || 'Sin categoría' %></p>
-                                    <h3 class="product-name"><%= producto.nombre %></h3>
-                                    <h4 class="product-price">
-                                        $<%= Number(producto.precio * (1 - producto.descuento / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
-                                        <% if (producto.descuento > 0) { %>
-                                        <del class="product-old-price">$<%= Number(producto.precio).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></del>
-                                        <% } %>
-                                    </h4></a>
-                                    <div class="product-rating">
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                    </div>
-                                    <div class="product-btns">
-                                        <button class="add-to-wishlist" data-product-id="<%= producto.id %>" data-product-name="<%= producto.nombre %>" 
-                                                data-product-price="<%= producto.precio %>" data-product-discount="<%= producto.descuento || 0 %>"
-                                                data-product-image="<%= producto.imagen %>" data-product-color="<%= producto.color %>">
-                                                <i class="fa fa-heart-o"></i> <span class="tooltipp">Lista de deseo</span></button>
-                                        <button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">Comparación</span></button>
-                                        <button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">Vistazo rapido</span></button>
-                                    </div>
-                                </div>
-                                <div class="add-to-cart">
-                                    <button class="add-to-cart-btn"
-                                        data-id="<%= producto.id %>" data-nombre="<%= producto.nombre %>" data-precio="<%= producto.precio %>" data-color="<%= producto.color %>"
-                                        data-descuento="<%= producto.descuento %>" data-stock="<%= producto.stock %>" data-imagen="<%= producto.imagen %>">
-                                        <i class="fa fa-shopping-cart"></i> Añadir al carrito
-                                        </button>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- /product -->
-                    <% }); %>
-                <% } else { %>
-                    <p class="text-center">No hay productos recomendados en este momento.</p>
-                <% } %>
             </div>
-        </div>
-    </div>
-<!-- /Section -->
-
-		<%- include('./partials/footer.ejs') %>
-
-			</body>
-
+            <% if (recomendados && recomendados.length> 0) { %>
+                <% recomendados.forEach(producto=> { %>
+                    <!-- product -->
+                    <div class="col-md-3 col-xs-6">
+                        <div class="product">
+                            <div class="product-img">
+                                <a href="/product/<%= producto.id %>?color=<%= producto.color %>">
+                                    <img src="<%= producto.imagen %>" alt="<%= producto.nombre %>">
+                                    <div class="product-label">
+                                        <% if (producto.descuento> 0) { %>
+                                            <span class="sale">-<%= producto.descuento %>%</span>
+                                            <% } %>
+                                            <% const fechaCreacion=new Date(producto.fecha); const hoy=new Date();
+                                            const diferenciaDias=(hoy - fechaCreacion) / (1000 * 60 * 60 * 24);
+                                            if (diferenciaDias <=30) { %>
+                                                <span class="new">Nuevo</span>
+                                                <% } %>
+                                            </div>
+                                        </div>
+                                        <div class="product-body">
+                                            <p class="product-category">
+                                                <%= producto.categoria || 'Sin categoría' %>
+                                            </p>
+                                            <h3 class="product-name">
+                                                <%= producto.nombre %>
+                                             </h3>
+                                             <h4 class="product-price">
+                                                $<%= Number(producto.precio * (1 - producto.descuento / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, "," ) %>
+                                                <% if (producto.descuento> 0) { %>
+                                                    <del class="product-old-price">
+                                                        $<%= Number(producto.precio).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></del>
+                                                        <% } %>
+                                                    </h4></a>
+                                                    <div class="product-rating">
+                                                        <i class="fa fa-star"></i>
+                                                        <i class="fa fa-star"></i>
+                                                        <i class="fa fa-star"></i>
+                                                        <i class="fa fa-star"></i>
+                                                        <i class="fa fa-star"></i>
+                                                    </div> 
+                                                    <div class="product-btns">
+                                                        <button class="add-to-wishlist" data-product-id="<%= producto.id %>"data-product-name="<%= producto.nombre %>" 
+                                                            data-product-price="<%= producto.precio %>" data-product-discount="<%= producto.descuento || 0 %>"
+                                                            data-product-image="<%= producto.imagen %>" data-product-color="<%= producto.color %>"> 
+                                                            <i class="fa fa-heart-o"></i> <span class="tooltipp">Lista de deseo</span>
+                                                        </button>
+                                                        <button class="add-to-compare"><i class="fa fa-exchange"></i>
+                                                            <span class="tooltipp">Comparación</span>
+                                                        </button>
+                                                        <button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">Vistazo rapido</span></button>
+                                                    </div>
+                                                </div>
+                                                <div class="add-to-cart">
+                                                    <button class="add-to-cart-btn" data-id="<%= producto.id %>" data-nombre="<%= producto.nombre %>" data-precio="<%= producto.precio %>"
+                                                        data-color="<%= producto.color %>" data-descuento="<%= producto.descuento %>" data-stock="<%= producto.stock %>" data-imagen="<%= producto.imagen %>">
+                                                        <i class="fa fa-shopping-cart"></i> Añadir al carrito
+                                                    </button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <!-- /product -->
+                                        <% }); %> 
+                                        <% } else { %>
+                                            <p class="text-center">No hay productos recomendados en este momento.</p>
+                                            <% } %>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- /Section -->
+        
+        <%- include('./partials/footer.ejs') %>
+        
+</body>
+        
 <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+<script src="https://unpkg.com/feather-icons"></script>
 
-			</html>
+        
+</html>
