--- a/src/views/profile/account.ejs
+++ b/src/views/profile/account.ejs
@@ -1,5 +1,7 @@
 <%- include('../partials/header.ejs') %>
 
+    <link rel="stylesheet" href="/css/toastify.css">
+
     <link type="text/css" rel="stylesheet" href="/css/account.css" />
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
@@ -58,5 +60,7 @@
 
       <script src="/js/userProfile.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+      <script src="https://unpkg.com/feather-icons"></script>
+
 
   <%- include('../partials/footer.ejs') %>
