--- a/src/views/store/contact.ejs
+++ b/src/views/store/contact.ejs
@@ -1,9 +1,9 @@
 <%- include('../partials/header.ejs') %>
 
-  <!-- Contact -->
-  <link type="text/css" rel="stylesheet" href="/css/contact.css" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+<link type="text/css" rel="stylesheet" href="/css/contact.css"/>
+<link rel="stylesheet" href="/css/toastify.css">
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 
 <div class="contactos-page">
 <body>
@@ -96,26 +96,33 @@
 </div>
 
 <% if (success) { %>
-    <script>
-      document.addEventListener('DOMContentLoaded', () => {
-        Toastify({
-          text: "Mensaje enviado correctamente",
-          duration: 3000,
-          close: true,
-          gravity: "top",
-          position: "right",
-          stopOnFocus: true,
-          backgroundColor: "#4CAF50",
-          className: "toast-notification"
-        }).showToast();
-      });
-    </script>
-  <% } %>
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      Toastify({
+        text: `<i data-feather="check-circle" style="vertical-align: middle; margin-right: 8px;"></i> Mensaje enviado correctamente`,
+        duration: 3000,
+        close: true,
+        gravity: "top",
+        position: "right",
+        stopOnFocus: true,
+        backgroundColor: "#4CAF50",
+        escapeMarkup: false,
+        className: "toast-notification"
+      }).showToast();
+
+      setTimeout(() => {
+        feather.replace();
+      }, 50);
+    });
+  </script>
+<% } %>
+
   
   <%- include('../partials/footer.ejs') %>
 
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+<script src="https://unpkg.com/feather-icons"></script>
 
 </html>
