--- a/src/views/store/product.ejs
+++ b/src/views/store/product.ejs
@@ -1,40 +1,40 @@
 <%- include('../partials/header.ejs') %>	
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+  <link rel="stylesheet" href="/css/toastify.css">
 
-	<!-- SECTION -->
-	<div class="section">
-		<!-- container -->
-		<div class="container">
-			<div id="product-root" data-product-stocks='<%- JSON.stringify(stocksPorColor) %>'
-				data-product-id="<%= producto.id %>">
-				<!-- row -->
-				<div class="row">
-					<!-- Product main img -->
-					<div class="col-md-5 col-md-push-2">
-						<div id="product-main-img">
-							<% if (imagenesPorColor) { for (const [color, imagen] of Object.entries(imagenesPorColor)) { %>
-								<div class="product-preview">
-									<img src="<%= imagen %>" alt="<%= color %>" class="product-img">
-								</div>
-							<% } } %>
+<!-- SECTION -->
+<div class="section">
+	<!-- container -->
+	<div class="container">
+		<div id="product-root" data-product-stocks='<%- JSON.stringify(stocksPorColor) %>'
+			data-product-id="<%= producto.id %>">
+			<!-- row -->
+			<div class="row">
+				<!-- Product main img -->
+				<div class="col-md-5 col-md-push-2">
+					<div id="product-main-img">
+						<% if (imagenesPorColor) { for (const [color, imagen] of Object.entries(imagenesPorColor)) { %>
+							<div class="product-preview">
+								<img src="<%= imagen %>" alt="<%= color %>" class="product-img">
+							</div>
+						<% } } %>
+					</div>
+				</div>
+
+				<!-- Product thumb imgs -->
+				<div class="col-md-2 col-md-pull-5">
+					<div id="product-imgs">
+						<% for (const [color, imagen] of Object.entries(imagenesPorColor)) { %>
+							<div class="product-preview"
+								onclick="changeColor({ value: '<%= color %>' }, '<%= producto.id %>')"
+								data-product-id="<%= producto.id %>">
+								<img src="<%= imagen %>" alt="<%= color %>" class="product-img">
+							</div>
+							<% } %>
 						</div>
 					</div>
-	
-					<!-- Product thumb imgs -->
-					<div class="col-md-2 col-md-pull-5">
-						<div id="product-imgs">
-							<% for (const [color, imagen] of Object.entries(imagenesPorColor)) { %>
-								<div class="product-preview"
-									onclick="changeColor({ value: '<%= color %>' }, '<%= producto.id %>')"
-									data-product-id="<%= producto.id %>">
-									<img src="<%= imagen %>" alt="<%= color %>" class="product-img">
-								</div>
-								<% } %>
-						</div>
-					</div>
 
-				 
 		<!-- Product details -->
 		<div class="col-md-5">
 			<div class="product-details">
@@ -459,8 +459,9 @@
 	<%- include('../partials/footer.ejs') %>
 
 	</body>
-	
+
 	    <script src="/js/stockColor.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+		<script src="https://unpkg.com/feather-icons"></script>
 
 	</html>
