--- a/src/views/store/store.ejs
+++ b/src/views/store/store.ejs
@@ -1,7 +1,6 @@
 <%- include('../partials/header.ejs') %>
 
-	<!DOCTYPE html>
-	<html lang="en">
+  <link rel="stylesheet" href="/css/toastify.css">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 
@@ -285,7 +284,8 @@
 	<%- include('../partials/footer.ejs') %>
 
 	</body>
-	
+
 		<script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+		<script src="https://unpkg.com/feather-icons"></script>
 
 	</html>
