--- a/src/views/login/forgotPass/newpass.ejs
+++ b/src/views/login/forgotPass/newpass.ejs
@@ -26,7 +26,7 @@
           class="password-input <%= validationErrors?.confirm ? 'input-error' : '' %>">
 
 
-          <span onclick="togglePassword('confirmPassword')" class="toggle-password">
+          <span onclick="togglePassword('confirm')" class="toggle-password">
             <i id="eyeIconConfirmPassword" class="fas fa-eye-slash"></i>
           </span>
         </div>
