--- a/src/views/claro.ejs
+++ b/src/views/claro.ejs
@@ -440,7 +440,7 @@ app.get('/verify', (req, res) => {
 //         console.error('Error actualizando cantidad:', err);
 //     }
 
-//     await cargarCarrito();
+//     await loadCartPreview();
 //     return value;
 // }
 
