--- a/public/css/login.css
+++ b/public/css/login.css
@@ -135,6 +135,12 @@ a:hover {
   width: 100%;
 }
 
+#resendButton:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+  opacity: 0.6;
+}
+
 /* Estilos responsivos */
 @media (max-width: 768px) {
     .login-container {
